--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
                   <label class="player__slider player__slider--volume"><i class="fas fa-volume-up jsMuteToggle"></i>
                     <input class="jsVolumeRange" type="range" min="0" max="1" step="0.05" value="1"/>
                   </label>
-                  <div class="player-time"><span class="playe-timer__now jsTimeNow">00:00</span><span> / </span><span class="player-time__all jsTimeAll">00:00</span></div>
+                  <div class="player-time"><span class="player-time__now jsTimeNow">00:00</span><span> / </span><span class="player-time__all jsTimeAll">00:00</span></div>
                 </div>
                 <div class="player-tools__group">
                   <button class="player__button player--screen jsFullScreen"><i class="fas fa-expand"></i></button>
