--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,9 @@
               </div>
             </div>
           </div>
-          <h1 class="player__title player__title--white">國立虎尾科技學生會 虎嘯聲新生特刊（NFUSA Freshmen 2015）</h1>
+          <div class="content player-content">
+            <h1 class="player__title player__title--white">國立虎尾科技學生會 虎嘯聲新生特刊（NFUSA Freshmen 2015）</h1>
+          </div>
         </div>
       </section>
     </main>
