--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,8 @@
                   <div class="player-time"><span class="player-time__now jsTimeNow">00:00</span><span> / </span><span class="player-time__all jsTimeAll">00:00</span></div>
                 </div>
                 <div class="player-tools__group">
-                  <button class="player__button player--screen jsFullScreen"><i class="fas fa-expand"></i></button>
+                  <button class="player__button player__speed jsSpeed">×1</button>
+                  <button class="player__button player__screen jsFullScreen"><i class="fas fa-expand"></i></button>
                 </div>
               </div>
             </div>
